--- a/src/main/resources/ToDo
+++ b/src/main/resources/ToDo
@@ -1,11 +1,4 @@
-1) Meine TagsLoL muss mehrere Listen mit jeweils einen concatinierten TagStreing haben. Bisher ist es nur ein zusammegepappter String pber alle Bilder
-
-
-
-
-
-
-
+1) Bei einem Klick auf ein Bild soll statt eines Hyperlink zu einer weiteren Seite eine Art Popup kommen, dass das Bild in groß anzeigt und einen Download Button einblendet.
 
 --------------------------------------------------
 
