Working Modal with data transfer transfer

--- a/src/main/resources/ToDo
+++ b/src/main/resources/ToDo
@@ -1,4 +1,4 @@
-1) Bei einem Klick auf ein Bild soll statt eines Hyperlink zu einer weiteren Seite eine Art Popup kommen, dass das Bild in groß anzeigt und einen Download Button einblendet.
+1) Pagination
 
 --------------------------------------------------
 
