--- a/src/main/resources/ToDo
+++ b/src/main/resources/ToDo
@@ -1,5 +1,4 @@
-0) Mindestens noch die Tags backgrounds, iphone wallpapers, traveling, animals, flatlay,spacefortext,vintage herunterladen
-
+0) Alle thumbnails und images lowercase abspeichern
 1) Anstelle einer Riesenliste am Anfang einfach nur ein "curated" mit 50 Einträgen oder so
 
 
